--- a/README.org
+++ b/README.org
@@ -1,14 +1,15 @@
 * Getting Started
 
-We will be using [Steel Bank Common Lisp](http://www.sbcl.org/), you can get it with Homebrew:
+We will be using [[http://www.sbcl.org/][Steel Bank Common Lisp]], you can get it with Homebrew:
 
 #+begin_src shell
 brew install sbcl
 #+end_src
 
-Emacs is highly recommended, it has very powerful editing modes for Lisp (I recommend [sly](https://github.com/joaotavora/sly)).
+Emacs is highly recommended, it has very powerful editing modes for Lisp (I recommend [[https://github.com/joaotavora/sly][sly]]).
+If you are new to Emacs, I recommend [[https://github.com/hlissner/doom-emacs][Doom Emacs]].
 
-If you are new to Emacs, I recommend [Doom Emacs](https://github.com/hlissner/doom-emacs).
+There is a usable extension for VS Code users, check it out [[https://lispcookbook.github.io/cl-cookbook/vscode-alive.html][here]].
 
 * Resources
 - http://www.paulgraham.com/acl.html
