--- a/apps/game/README.org
+++ b/apps/game/README.org
@@ -1,3 +1,14 @@
+# Install
+
+#+begin_src shell
+  git clone --branch wip https://github.com/aymanosman/cl-raylib.git ~/quicklisp/local-projects/raylib
+  sbcl --load release.lisp --eval '(sb-ext:exit)'
+
+  ./defender
+#+end_src
+
+# Dev Log
+
 [[https://user-images.githubusercontent.com/3605049/166840214-2dab3fdc-3af9-4476-ae3d-82a4d54b9a4c.mov][2022-05-04]]
 
 [[https://user-images.githubusercontent.com/3605049/166574019-a7e41305-dbb1-4fab-895e-7b43f9028fbe.mov][2022-05-03]]
